fix some problie